# eacn3

./: .gitignore  .mcp.json  PROMO_VIDEO.md  README.md  TODO.md  index.html  pyproject.toml
.claude/: settings.local.json
docs/: adapter.md  agent.md  architecture.md  cluster.md  deploy-network.md  deploy-plugin.md  discovery.md  economy.md  event-types.md  logger.md  matcher.md  mcp-reverse-control.md  network-api.md  network.md  plugin-impl-plan.md  plugin-impl-skills.md  plugin-impl-tools.md  plugin-impl.md  plugin.md  registry.md  reputation.md  review-long-term-stability.md  server.md  task.md  tools.md
eacn/network/: adjudication.py  app.py  config.default.toml  config.py  matcher.py  offline_store.py  push.py  reputation.py  task_manager.py
examples/: quickstart.py
plugin/: .mcp.json  AGENT_GUIDE.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  server.ts  start-mcp.sh
plugin/scripts/: cli.cjs  postinstall.cjs  postinstall.js
plugin/src/: a2a-server.ts  event-transport.ts  models.ts  network-client.ts  plugin-sdk.ts  reverse-control.ts  state.ts  ws-manager.ts
tests/: conftest.py
tests/api/: conftest.py  test_adjudication.py  test_adjudication_flow.py  test_admin.py  test_admin_and_misc.py  test_api_robustness.py  test_audit_fixes.py  test_auth_system.py  test_bidding.py  test_cluster_router.py  test_complex_scenarios.py  test_concurrent_multi_agent_full.py  test_concurrent_queue.py  test_concurrent_stress.py  test_config.py  test_daily_usage_simulation.py  test_database.py  test_db_concurrent.py  test_degradation.py  (+34 more)
(+125 files in other folders)
