[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eacn"
version = "0.1.0"
description = "Emergent Agent Collaboration Network"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
